# ESP32-AiThinker

./: .gitignore  CMakeLists.txt  PREPARE.md  README.md  Sample.code-workspace  desktop.ini  platformio.ini  sdkconfig
app/: event.c  event.h  http.c  http.h  task.c  task.h  tcpip.c  tcpip.h
bsp/: gpio.c  gpio.h  i2s.c  i2s.h  misc.c  misc.h  schematic.h  sdio.c  sdio.h  wifi.c  wifi.h
bsp/dev/: camera.c  camera.h  led.c  led.h  sdcard.c  sdcard.h
bsp/dev/support/: cam_config.h  cam_hal.h  sccb.c
lib/Firebase-ESP32-Client/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
lib/Firebase-ESP32-Client/.github/workflows/: compile_examples.yml  compile_library.yml  cpp_lint.yml
lib/Firebase-ESP32-Client/src/: FirebaseFS.h
lib/Firebase-ESP32-Client/src/bearssl/: i15_bitlen.c  i15_decred.c  i15_fmont.c  i15_iszero.c  i15_moddiv.c  i15_modpow2.c  i15_mulacc.c  i15_ninv15.c  i15_reduce.c  i15_rshift.c  i31_add.c  i31_bitlen.c  i31_decmod.c  i31_decode.c  i31_decred.c  i31_encode.c  i31_fmont.c  i31_iszero.c  i31_moddiv.c  i31_modpow.c  i31_modpow2.c  i31_montmul.c  i31_mulacc.c  i31_muladd.c  (+57 more)
lib/Firebase_ESP32_Client/: library.json
lib/RandleH_AiThinker/src/: rh_common.h
lib/jsmn/: README.md
main/: CMakeLists.txt  ESP32-WiFi-Monitor.code-workspace  Kconfig.projbuild  main.c
src/: main.cpp
test/: rh_test.cc
test/Authentications/LegacyTokenAuthen/: LegacyTokenAuthen.ino
test/sketch_0625/: sketch_0625.ino
test/sketch_0717/: sketch_0717.ino
test/sketch_0721/: sketch_0721.ino
web/: config.JSON  example.html  index.html  script.js  style.css
(+46 files in other folders)
